# jackctl

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  ReserveDevice1.xml  Typo in CONTRIBUTING.md  build.rs  code_of_conduct.md  contributors.toml  jackctl.desktop  mockup.glade  shell.nix
examples/: enum_cards.rs
hooks/: pre-commit
res/: jack_settings.glade  main.glade  resources.xml
src/: cb_channel.rs  engine.rs  error.rs  jack.rs  jackctl.glade  log.rs  main.rs  mixer.rs  model.rs  process_manager.rs  ui.rs
src/mixer/: card_lock.rs  mod.rs  reservedevice1.rs
src/model/: card.rs  event.rs  events.rs  mod.rs  port.rs
src/model/settings/: app.rs  cards.rs  jack.rs  mod.rs
src/model2/: audio.rs  card.rs  con.rs  events.rs  jack.rs  midi.rs  mod.rs  port.rs
src/model2/settings/: cards.rs  mod.rs
src/process_manager/: mod2.rs  reservedevice1.rs
src/rts/: jack.rs  mod.rs
src/rts/hardware/: alsa.rs  alsa_card.rs  mod.rs
src/rts/jack/: async_client.rs  card.rs  client.rs  cmd.rs  mod.rs  server.rs
src/settings/: app.rs  cards.rs  clients.rs  jack.rs  mod.rs
src/ui/: about.rs  card_query.rs  matrix.rs  midi.rs  mixer.rs  mod.rs  pages.rs  settings.rs  tray.rs  utils.rs  window.rs
