[package]
name = "jackctl"
version = "0.1.0"
authors = ["lauren"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_24"] }
gio = {version = "0.9", features = ["v2_56"] }
glib = "*"
libappindicator = "0.5"

psutil = "3.2"
ctrlc = { version = "3.1", features = ["termination"] }

jack = "0.7"
alsa = "0.5"