[package]
name = "jackctl"
version = "0.1.0"
authors = ["lauren"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_24"] }
gio = { version = "0.9.1", features = ["v2_56"] }
gdk = "0.13.2"

glib = "0.10.3"
libappindicator = "0.5"
dbus = "0.9.4"
dbus-tree = "0.9.1"

psutil = "3.2"
ctrlc = { version = "3.1", features = ["termination"] }
once_cell = "1.8"

jack = { git = "https://github.com/IGBC/rust-jack", branch = "main" }
alsa = "0.5"

regex = "1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
toml = "0.5"

async-std = "1.0"
futures = "0.3"
atomptr = "1.1"

tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json", "fmt", "ansi"] }
